Mon Nov 17 09:20:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h:
          Added missing defines

Mon Nov 17 09:12:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          Updated version check for WinCE

Mon Nov 17 08:46:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessWinCE.pm:
          Removed VxWorks specific commandline code

Mon Nov 17 08:38:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added bug_3470

Mon Nov 17 08:37:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-macros.h:
          If MPC_LIB_MODIFIER is defined then set ACE_LD_DECORATOR_STR to
          this value. This way the DLL find routines in ACE do use the MPC
          modifier name automatically

        * ace/config-win32-msvc.h:
          No need anymore to set ACE_LD_DECORATOR_STR

        * ace/DLL_Manager.cpp:
        * ace/Lib_Find.cpp:
        * tests/Based_Pointer_Test.cpp:
        * tests/DLL_Test.cpp:
          When ACE_LD_DECORATOR_STR is set, then use it on any platform

        * ace/Service_Gestalt.h:
          Doxygen change

        * ace/Service_Gestalt.inl:
          Layout change

        * bin/MakeProjectCreator/config/acedefaults.mpb:
          Enable macro_for_lib_modifier for vc7/vc8/vc9/vc10/nmake

        * bin/MakeProjectCreator/templates/vxtest.mpd:
          Added libname_prefix and lib_modifier support

        * tests/Bug_2772_Regression_Test.cpp:
          Fixed compile problem with Cygwin

Sun Nov 16 17:30:06 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_gnuwin32_common.GNU:

          Set RC_OUTPUT_FLAG for use the with the "windres" tool.

Sun Nov 16 06:52:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3505_Regression_Test.cpp:
          Fixed conversion warnings
